# PAVEPO_test_task

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.template  main.py  postgresql.conf  pyproject.toml
backend/: alembic.ini
backend/src/: constants.py  exceptions.py  main.py  utils.py  yandex_id_cred
backend/src/api/: __init__.py  auth.py  dependencies.py  files.py  users.py
backend/src/auth/: deps.py  jwt.py  yandex_id.py
backend/src/bootstrap/: __main__.py  users.py
backend/src/db/: session.py
backend/src/db/alembic/: env.py
backend/src/db/alembic/versions/: 2035b12f8ba4_create_pass_table.py  5b7f91883360_on_delete_cascade_for_yandex_acc_id.py  73248d775db5_create_name_field_for_user.py  883e5325d165_create_yandex_account_table.py  8f71b10596ca_create_user_yandex_account_table_fk.py  b66edaba9d78_user_fk_for_file.py  c0dd009d770c_file_storage_ondele_cascade_user_id.py  d49fd35ace93_create_pass_field_for_user.py  e0d8050dc083_init.py
backend/src/db/models/: __init__.py  base.py  files.py  users.py
backend/src/db/repositories/: base.py  files.py  users.py  yandex_account.py
backend/src/schemas/: auth.py  files.py  users.py  yandex_id.py
backend/src/settings/: config.py
